--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "Rightmove Improvements",
-    "description": "Improvements to rightmove",
-    "version": "0.0.5",
+    "name": "Rightmove Sale History",
+    "description": "Display property sale history on rightmove search pages",
+    "version": "0.0.6",
     "manifest_version": 3,
     "action": {
         "default_popup": "popup.html"
